1 update rf.lib; 2 add key in

--- a/PHY62XX_SDK_2.0.1/example/ble_peripheral/pwmLight/pwmLight.uvprojx
+++ b/PHY62XX_SDK_2.0.1/example/ble_peripheral/pwmLight/pwmLight.uvprojx
@@ -474,6 +474,11 @@
               <FileType>1</FileType>
               <FilePath>.\Source\adcCaptrue.c</FilePath>
             </File>
+            <File>
+              <FileName>key.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Source\key.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
